[package]
name = "email-manager"
version = "0.1.0"
edition = "2021"
authors = ["adlsdztony <zzl0712@connect.hku.hk>"]
license = "MIT OR Apache-2.0"
description = "A library for managing emails and services linked to emails."
readme = "README.md"
homepage = "https://github.com/adlsdztony/email-manager"
repository = "https://github.com/adlsdztony/email-manager"
keywords = ["email", "manager", "service", "library", "rust"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
